--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,11 +92,16 @@
     position: relative;
     z-index: 1001;
 }
-
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 a {
     text-decoration: none !important;
     font-size: 16px;
 }
+
 
 p {
     font-size: 16px;
